fix: constrain preview width on smaller screens
Fixes [UIW-8: Fix preview width on smaller screens](https://linear.app/raphael-salaja/issue/UIW-8/fix-preview-width-on-smaller-screens)

--- a/documents/components/12-principles-of-animation/12-appeal/styles.module.css
+++ b/documents/components/12-principles-of-animation/12-appeal/styles.module.css
@@ -5,10 +5,6 @@
   justify-content: center;
   width: 640px;
   height: 512px;
-
-  @media (max-width: 640px) {
-    scale: 0.75;
-  }
 }
 
 .frame {
